[gd_scene load_steps=8 format=3 uid="uid://buwuuc2mnjioe"]

[ext_resource type="Script" path="res://Scripts/settings_screen.gd" id="1_atlmk"]
[ext_resource type="Shader" path="res://end_screen.gdshader" id="2_0rfml"]
[ext_resource type="Texture2D" uid="uid://cmhrkgax64dtu" path="res://Assets/Art/cog_3.svg" id="3_o65w6"]

[sub_resource type="Animation" id="Animation_af0tx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hbdfn"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OpenButtonContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpxaq"]
_data = {
"RESET": SubResource("Animation_af0tx"),
"blur": SubResource("Animation_hbdfn")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5voxd"]
resource_local_to_scene = true
shader = ExtResource("2_0rfml")
shader_parameter/lod = 0.0

[node name="settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_atlmk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gpxaq")
}

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5voxd")
layout_mode = 0
offset_right = 1281.0
offset_bottom = 720.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -250.0
offset_right = 380.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Sliders" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Sliders"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Sound Effects Volume        "

[node name="SFXVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/Sliders"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
value = 50.0

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Sliders"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/Sliders"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
value = 50.0

[node name="Columns" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Row1" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Columns"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/Columns/Row1"]
layout_mode = 2
focus_mode = 0
theme_override_constants/h_separation = 30
theme_override_font_sizes/font_size = 40
text = "Mute"

[node name="ScreenShake" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/Columns/Row1"]
layout_mode = 2
focus_mode = 0
theme_override_constants/h_separation = 30
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Screen shake"

[node name="Row2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Columns"]
layout_mode = 2

[node name="Vibrations" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/Columns/Row2"]
layout_mode = 2
focus_mode = 0
theme_override_constants/h_separation = 30
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Vibrations"

[node name="Speedometer" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/Columns/Row2"]
layout_mode = 2
focus_mode = 0
theme_override_constants/h_separation = 30
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Speedometer"

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Resume"

[node name="OpenButtonContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 158.0
offset_bottom = 88.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 30

[node name="SettingsButtonContainer" type="HBoxContainer" parent="OpenButtonContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SettingsButton" type="Button" parent="OpenButtonContainer/SettingsButtonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.580392)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.796078)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0.784314)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0.815686)
theme_override_constants/icon_max_width = 50
icon = ExtResource("3_o65w6")
flat = true

[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/Sliders/SFXVolumeSlider" to="." method="_update_settings"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/Sliders/MusicVolumeSlider" to="." method="_update_settings"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/Columns/Row1/Mute" to="." method="_update_settings"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/Columns/Row1/ScreenShake" to="." method="_update_settings"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/Columns/Row2/Vibrations" to="." method="_update_settings"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/Columns/Row2/Speedometer" to="." method="_update_settings"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="close_settings"]
[connection signal="pressed" from="OpenButtonContainer/SettingsButtonContainer/SettingsButton" to="." method="open_settings"]
